objects/pi__Category_Lead_Score__c.object
<CustomObject>
    <fields>
        <fullName>pi__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Category_Lead_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Account_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot Account Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Scoring_Category__c</fullName>
        <label>Pardot Scoring Category</label>
        <referenceTo>pi__Pardot_Scoring_Category__c</referenceTo>
        <relationshipName>Category_Lead_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pi__Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__Scoring_Category_Name__c</fullName>
        <formula>pi__Pardot_Scoring_Category__r.pi__Category_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scoring Category Name</label>
        <type>Text</type>
    </fields>
</CustomObject>